--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "hardhat": "^2.12.1"
     },
     "dependencies": {
-        "@openzeppelin/contracts": "^4.7.3"
+        "@openzeppelin/contracts": "^4.7.3",
+        "solmate": "^6.6.1"
     }
 }
